add two functions: data_extractor and scheduler
The data_extractor function extracts data from table and provides it as input to the scheduler.

The Scheduler function performs the scheduling according to sjf algorithm based on given input.

--- a/sjf.html
+++ b/sjf.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="sfsstyle.css">
+    <link rel="stylesheet" href="sjfstyles.css">
 </head>
 <body>
 <!------------------------------------------------------------------------------------------------>
@@ -49,7 +49,7 @@
     </div>
     <div>
         <button class="buttontype1">Reset Table</button>
-        <button class="buttontype1">Calculate</button>
+        <button class="buttontype1" onclick="calc()">Calculate</button>
     </div>
     <div id="Tablediv">
         <table id="table1">
