improvement in scheduler logic and minor bug fixing

--- a/sjf.html
+++ b/sjf.html
@@ -49,7 +49,7 @@
     </div>
     <div>
         <button class="buttontype1">Reset Table</button>
-        <button class="buttontype1" onclick="calc()">Calculate</button>
+        <button class="buttontype1" onclick="data_extractor()">Calculate</button>
     </div>
     <div id="Tablediv">
         <table id="table1">
