--- a/sjf.html
+++ b/sjf.html
@@ -47,7 +47,7 @@
         <!-- Submit button -->
         <input id="Submit" type="submit" value="Input Values" onclick="addrow()">
     </div>
-    <div>
+    <div id="tablebuttons">
         <button class="buttontype1">Reset Table</button>
         <button class="buttontype1" onclick="data_extractor()">Calculate</button>
     </div>
@@ -63,16 +63,11 @@
                     <th>Waiting Time</th>
                 </tr>
             </thead>
-            <tbody id="som">
-
-            </tbody>
         </table>
         <!-- <table id="table2">
             <thead>
                 <tr>
-                    <th>Completion Time</th>
-                    <th>TurnAround Time</th>
-                    <th>Waiting Time</th>
+                    
                 </tr>
             </thead>
         </table> -->
