implement gantt chart

--- a/sjf.html
+++ b/sjf.html
@@ -72,7 +72,10 @@
             </thead>
         </table> -->
     </div>
-    <div id="chart" style="display:flex; flex-direction: row; margin: 0; border: 2px solid black; height: 50px;"></div>
+    
+    <div id="container">
+        <div id="chart" style="display:flex; flex-direction: row; margin: 0; border: 2px solid black; height: 50px;"></div>
+    </div>
 
 </body>
 <script src="script.js"></script>
