--- a/sjf.html
+++ b/sjf.html
@@ -11,7 +11,7 @@
 <!------------------------------------------------------------------------------------------------>
     <!--First division (Goback button div) used to position the goBack button-->
     <div id="DIV1">
-        <button class="buttontype1" onclick="window.location.href='projects.html';">GO back</button>
+        <button class="buttontype1" onclick="window.location.href='index.html';">GO back</button>
     </div>
 <!------------------------------------------------------------------------------------------------>
     <!--Title -->
