changes in display

--- a/sjf.html
+++ b/sjf.html
@@ -72,9 +72,9 @@
             </thead>
         </table> -->
     </div>
-    
+    <h2>GANTT CHART</h2>
     <div id="container">
-        <div id="chart" style="display:flex; flex-direction: row; margin: 0; border: 2px solid black; height: 50px;"></div>
+        <div id="chart" style="display:flex; flex-direction: row; margin: 0; height: 50px;"></div>
     </div>
 
 </body>
