--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a id="sidebutton" onclick="sidebart()">Open</button>
+        <div id="sidebox">
+            <ul>
+                <li class="sidebar_li">
+                    <a href="#home" class="sidebar_links">Home</a>
+                </li>
+                <li class="sidebar_li">
+                    <a href="#sjf" class="sidebar_links">Shortest Job First</a>
+                </li>
+                <li class="sidebar_li">
+                    <a href="#project2" class="sidebar_links">Project2</a>
+                </li>
+                <li class="sidebar_li">
+                    <a href="#project3" class="sidebar_links">Project3</a>
+                </li>
+                <li class="sidebar_li">
+                    <a href="#project4" class="sidebar_links">Project4</a>
+                </li>
+            </ul>
+        </div>
     <!-- ------------------------------------------------------------------ -->
     <section id="home">
         <div style="height: 50px; background: transparent;"></div>
