improvements in gantt chart

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a id="sidebutton" onclick="sidebart()">Open</button>
+    <!-- <a id="sidebutton" onclick="sidebart()">Open</button>
         <div id="sidebox">
             <ul>
                 <li class="sidebar_li">
@@ -27,7 +27,7 @@
                     <a href="#project4" class="sidebar_links">Project4</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
     <!-- ------------------------------------------------------------------ -->
     <section id="home">
         <div style="height: 50px; background: transparent;"></div>
